--- a/HP/hp/src/App.css
+++ b/HP/hp/src/App.css
@@ -2,6 +2,21 @@
   text-align: center;
 }
 
+.nav {
+  display: flex;
+  background-color: #282c34;
+  color: white;
+  padding-left: 30px;
+}
+div {
+  box-sizing: border-box;
+}
+.list {
+  padding-left: 20px;
+  text-align: left;
+  border-bottom: 1px solid #282c34;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
