--- a/homepage.css
+++ b/homepage.css
@@ -1,4 +1,11 @@
 .Head {
-    font-size: larger;
-    background-color: aquamarine;
+    background: cadetblue;
+    order: 0;
+    position: absolute;
+    top: 50px;
+    left: 30px;
+    z-index: 30;
+}
+.p {
+    z-index: 40;
 }
